Snackbar: Fix contrast, remove unnecessary rules
Use a dark solid background color - with a shadow (already existent)
- to stand out against content.

Make sure button is blue similar to test selection handles or some
icons etc. So it is visible at 1st sight what's the action

Remove unnecessary or duplicated rules

--- a/browser/css/device-mobile.css
+++ b/browser/css/device-mobile.css
@@ -834,6 +834,13 @@ td[id^='tb_spreadsheet-toolbar_item']:focus table.w2ui-button div.w2ui-icon, td[
 	margin: 16px 5% !important;
 	width: 90%;
 	position: absolute;
+	border-radius: var(--border-radius);
+}
+#mobile-wizard.popup.snackbar #label {
+	font-size: var(--default-font-size) !important;
+}
+#mobile-wizard.popup.snackbar #button {
+	font-size: 14px !important;
 }
 /*   - Import text */
 #mobile-wizard-content #separatoroptions {
